@@ -1,3 +1,13 @@
+2011-04-04  Vitaly Repeshko  <vitalyr@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        [V8] Keep dirty primitive CSS values alive.
+        https://bugs.webkit.org/show_bug.cgi?id=57810
+
+        * bindings/v8/V8GCController.cpp:
+        (WebCore::GrouperVisitor::visitDOMWrapper):
+
 2011-04-05  Simon Fraser  <simon.fraser@apple.com>
 
         Reviewed by Adele Peterson.
